# play_with_python_rust

./: README.md  exercises.md  notes.md  requirements.txt
cookie-cutter/: README.md  cookiecutter.json  requirements.txt
cookie-cutter/hooks/: post_gen_project.py
cookie-cutter/{{cookiecutter.project_slug}}/: Cargo.toml  pyproject.toml
cookie-cutter/{{cookiecutter.project_slug}}/src/: lib.rs
python/: sample_script.py  test_rust_integration.py
rust/my_pyo3_project/: Cargo.toml  pyproject.toml
rust/my_pyo3_project/src/: lib.rs  more_polars.rs
rust/pyo3_exercises/basic/python/: requirements.txt
rust/pyo3_exercises/basic/rust/: Cargo.toml
rust/pyo3_exercises/basic/rust/src/: lib.rs
