[package]
authors = ["piero gerbino <piero_gerbino@hotmail.com>"]
name = "my_pyo3_project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
polars = {version = "0.21", features =["lazy", "is_in"]}
pyo3-polars = "0.15.0"